--- a/.github/workflows/check-late-payments.yml
+++ b/.github/workflows/check-late-payments.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Check late payments
         run: |
           curl -X POST \
-            -H "X-Internal-Secret: ${{ secrets.CRON_SECRET }}" \
+            -H "X-Cron-Secret: ${{ secrets.CRON_SECRET }}" \
             -H "Content-Type: application/json" \
-            "${{ secrets.BASE_URL }}/api/paiements/check-late" \
+            "${{ secrets.BASE_URL }}/api/cron/check-late-payments" \
             -d '{}'
         
         env:
