--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "@auth/prisma-adapter": "^2.0.0",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@types/node-cron": "^3.0.11",
     "bcryptjs": "^3.0.3",
     "busboy": "^1.6.0",
     "chart.js": "^4.5.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
@@ -47,7 +48,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
