--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.6",
+    "@types/html2canvas": "^0.5.35",
     "@types/node-cron": "^3.0.11",
     "bcryptjs": "^3.0.3",
     "busboy": "^1.6.0",
@@ -38,6 +39,9 @@
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.475.0",
     "multer": "^2.0.2",
     "next": "14.2.33",
