--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/generate-invoices",
       "schedule": "0 8 * * *"
+    },
+    {
+      "path": "/api/cron/salary-notifications",
+      "schedule": "0 9 * * *"
     }
   ]
 }
