fix: resolve 19 dynamic server usage warnings in API routes
- Add 'export const dynamic = force-dynamic' to 10 API routes that use nextUrl.searchParams or getServerSession
- Fixed routes: /api/employees, /api/charges, /api/charges/stats/summary, /api/timesheets, /api/timesheets/my-timesheets, /api/salary-forecasts, /api/salary-forecasts/statistics/[employeeId], /api/debug/my-data, /api/projets/my-projects, /api/taches/mes-taches
- Build now compiles without dynamic server usage warnings

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
@@ -49,6 +50,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
     "pdfkit": "^0.17.2",
+    "puppeteer": "^24.33.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18",
