--- a/vercel.json
+++ b/vercel.json
@@ -2,68 +2,55 @@
   "crons": [
     {
       "path": "/api/cron/greetings",
-      "schedule": "0 9 * * *",
-      "description": "Envoyer les messages de vœux d'anniversaire et de fêtes à 9h00"
+      "schedule": "0 9 * * *"
     },
     {
       "path": "/api/cron/generate-invoices",
-      "schedule": "0 8 * * *",
-      "description": "Generate invoices daily at 08:00"
+      "schedule": "0 8 * * *"
     },
     {
       "path": "/api/cron/salary-notifications",
-      "schedule": "0 9 * * *",
-      "description": "Send salary notifications daily at 09:00"
+      "schedule": "0 9 * * *"
     },
     {
       "path": "/api/cron/check-late-payments",
-      "schedule": "0 10 * * *",
-      "description": "Check for late payments daily at 10:00"
+      "schedule": "0 10 * * *"
     },
     {
       "path": "/api/cron/check-late-tasks",
-      "schedule": "0 11 * * *",
-      "description": "Check for late tasks daily at 11:00"
+      "schedule": "0 11 * * *"
     },
     {
       "path": "/api/cron/create-daily-timesheets",
-      "schedule": "0 0 * * *",
-      "description": "Create mandatory daily timesheets for all employees at 00:00"
+      "schedule": "0 0 * * *"
     },
     {
       "path": "/api/cron/timesheet-reminder",
-      "schedule": "0 17 * * *",
-      "description": "Send timesheet reminders to all employees daily at 17:00"
+      "schedule": "0 17 * * *"
     },
     {
       "path": "/api/cron/timesheet-progressive-reminders",
-      "schedule": "0 18,19 * * *",
-      "description": "Send progressive timesheet reminders at 18:00 and 19:00"
+      "schedule": "0 18 * * *"
     },
     {
       "path": "/api/cron/salary/forecast-calculated",
-      "schedule": "0 0 31 * *",
-      "description": "Notifier les ADMINs que les prévisions salariales sont calculées (31 du mois)"
+      "schedule": "0 0 31 * *"
     },
     {
       "path": "/api/cron/salary/payment-due",
-      "schedule": "0 8 1 * *",
-      "description": "Rappeler le paiement des salaires + créer les charges (1er du mois)"
+      "schedule": "0 8 1 * *"
     },
     {
       "path": "/api/cron/salary/payment-late",
-      "schedule": "0 9 3 * *",
-      "description": "Alerte paiement retard si non payé (3 du mois)"
+      "schedule": "0 9 3 * *"
     },
     {
       "path": "/api/cron/goal-encouragement",
-      "schedule": "0 8 * * 1",
-      "description": "Send encouragement emails for stagnant objectives every Monday at 08:00"
+      "schedule": "0 8 * * 1"
     },
     {
       "path": "/api/cron/goal-achievement",
-      "schedule": "0 * * * *",
-      "description": "Send congratulation emails for achieved objectives every hour"
+      "schedule": "0 10 * * *"
     }
   ]
 }
