fix: restore accounting tables (dossiers_comptables, charges_detaillees, entrees_clients, situations_financieres) - fix prisma migration issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "buildCommand": "npx prisma migrate deploy --skip-generate && npm run build",
   "crons": [
     {
       "path": "/api/cron/generate-invoices",
